FINI/generated/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> statement ;
Rule 3     program -> statement ; program
Rule 4     statement -> ID = expression
Rule 5     statement -> member = expression
Rule 6     statement -> structure
Rule 7     statement -> EMPTY
Rule 8     statement -> PRINT
Rule 9     structure -> WHILE ( expression ) { program }
Rule 10    structure -> IF ( expression ) { program }
Rule 11    structure -> : expression
Rule 12    scene -> SCENE ( expression , [ id_list ] )
Rule 13    cli -> CLI ( expression , rect ) { program }
Rule 14    rect -> RECT ( expression , expression , expression , expression )
Rule 15    id_list -> expression
Rule 16    id_list -> expression , id_list
Rule 17    expression -> expression ADD_OP expression
Rule 18    expression -> expression MULT_OP expression
Rule 19    expression -> NUMBER
Rule 20    expression -> ID
Rule 21    expression -> STRING
Rule 22    expression -> scene
Rule 23    expression -> cli
Rule 24    expression -> { program }
Rule 25    expression -> ( expression )
Rule 26    statement -> WAITONEFRAME
Rule 27    expression -> member
Rule 28    member -> expression . climember
Rule 29    expression -> expression < expression
Rule 30    expression -> expression > expression
Rule 31    expression -> expression < = expression
Rule 32    expression -> expression > = expression
Rule 33    expression -> expression [ expression ]
Rule 34    climember -> FUNC
Rule 35    climember -> IMG
Rule 36    climember -> X
Rule 37    climember -> Y
Rule 38    climember -> W
Rule 39    climember -> H
Rule 40    expression -> ADD_OP expression

Terminals, with rules where they appear

(                    : 9 10 12 13 14 25
)                    : 9 10 12 13 14 25
,                    : 12 13 14 14 14 16
.                    : 28
:                    : 11
;                    : 2 3
<                    : 29 31
=                    : 4 5 31 32
>                    : 30 32
ADD_OP               : 17 40
CLI                  : 13
EMPTY                : 7
FUNC                 : 34
H                    : 39
ID                   : 4 20
IF                   : 10
IMG                  : 35
MULT_OP              : 18
NUMBER               : 19
PRINT                : 8
RECT                 : 14
SCENE                : 12
STRING               : 21
W                    : 38
WAITONEFRAME         : 26
WHILE                : 9
X                    : 36
Y                    : 37
[                    : 12 33
]                    : 12 33
error                : 
{                    : 9 10 13 24
}                    : 9 10 13 24

Nonterminals, with rules where they appear

cli                  : 23
climember            : 28
expression           : 4 5 9 10 11 12 13 14 14 14 14 15 16 17 17 18 18 25 28 29 29 30 30 31 31 32 32 33 33 40
id_list              : 12 16
member               : 5 27
program              : 3 9 10 13 24 0
rect                 : 13
scene                : 22
statement            : 1 2 3
structure            : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . statement ;
    (3) program -> . statement ; program
    (4) statement -> . ID = expression
    (5) statement -> . member = expression
    (6) statement -> . structure
    (7) statement -> . EMPTY
    (8) statement -> . PRINT
    (26) statement -> . WAITONEFRAME
    (28) member -> . expression . climember
    (9) structure -> . WHILE ( expression ) { program }
    (10) structure -> . IF ( expression ) { program }
    (11) structure -> . : expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }

    ID              shift and go to state 3
    EMPTY           shift and go to state 7
    PRINT           shift and go to state 8
    WAITONEFRAME    shift and go to state 9
    WHILE           shift and go to state 10
    IF              shift and go to state 13
    :               shift and go to state 14
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 4
    member                         shift and go to state 5
    structure                      shift and go to state 6
    scene                          shift and go to state 18
    cli                            shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .
    (2) program -> statement . ;
    (3) program -> statement . ; program

    $end            reduce using rule 1 (program -> statement .)
    }               reduce using rule 1 (program -> statement .)
    ;               shift and go to state 22


state 3

    (4) statement -> ID . = expression
    (20) expression -> ID .

    =               shift and go to state 23
    .               reduce using rule 20 (expression -> ID .)
    ADD_OP          reduce using rule 20 (expression -> ID .)
    MULT_OP         reduce using rule 20 (expression -> ID .)
    <               reduce using rule 20 (expression -> ID .)
    >               reduce using rule 20 (expression -> ID .)
    [               reduce using rule 20 (expression -> ID .)


state 4

    (28) member -> expression . . climember
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MULT_OP expression
    (29) expression -> expression . < expression
    (30) expression -> expression . > expression
    (31) expression -> expression . < = expression
    (32) expression -> expression . > = expression
    (33) expression -> expression . [ expression ]

    .               shift and go to state 24
    ADD_OP          shift and go to state 25
    MULT_OP         shift and go to state 26
    <               shift and go to state 27
    >               shift and go to state 28
    [               shift and go to state 29


state 5

    (5) statement -> member . = expression
    (27) expression -> member .

    =               shift and go to state 30
    .               reduce using rule 27 (expression -> member .)
    ADD_OP          reduce using rule 27 (expression -> member .)
    MULT_OP         reduce using rule 27 (expression -> member .)
    <               reduce using rule 27 (expression -> member .)
    >               reduce using rule 27 (expression -> member .)
    [               reduce using rule 27 (expression -> member .)


state 6

    (6) statement -> structure .

    ;               reduce using rule 6 (statement -> structure .)
    $end            reduce using rule 6 (statement -> structure .)
    }               reduce using rule 6 (statement -> structure .)


state 7

    (7) statement -> EMPTY .

    ;               reduce using rule 7 (statement -> EMPTY .)
    $end            reduce using rule 7 (statement -> EMPTY .)
    }               reduce using rule 7 (statement -> EMPTY .)


state 8

    (8) statement -> PRINT .

    ;               reduce using rule 8 (statement -> PRINT .)
    $end            reduce using rule 8 (statement -> PRINT .)
    }               reduce using rule 8 (statement -> PRINT .)


state 9

    (26) statement -> WAITONEFRAME .

    ;               reduce using rule 26 (statement -> WAITONEFRAME .)
    $end            reduce using rule 26 (statement -> WAITONEFRAME .)
    }               reduce using rule 26 (statement -> WAITONEFRAME .)


state 10

    (9) structure -> WHILE . ( expression ) { program }

    (               shift and go to state 31


state 11

    (25) expression -> ( . expression )
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 32
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 12

    (24) expression -> { . program }
    (1) program -> . statement
    (2) program -> . statement ;
    (3) program -> . statement ; program
    (4) statement -> . ID = expression
    (5) statement -> . member = expression
    (6) statement -> . structure
    (7) statement -> . EMPTY
    (8) statement -> . PRINT
    (26) statement -> . WAITONEFRAME
    (28) member -> . expression . climember
    (9) structure -> . WHILE ( expression ) { program }
    (10) structure -> . IF ( expression ) { program }
    (11) structure -> . : expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }

    ID              shift and go to state 3
    EMPTY           shift and go to state 7
    PRINT           shift and go to state 8
    WAITONEFRAME    shift and go to state 9
    WHILE           shift and go to state 10
    IF              shift and go to state 13
    :               shift and go to state 14
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    program                        shift and go to state 35
    statement                      shift and go to state 2
    expression                     shift and go to state 4
    member                         shift and go to state 5
    structure                      shift and go to state 6
    scene                          shift and go to state 18
    cli                            shift and go to state 19

state 13

    (10) structure -> IF . ( expression ) { program }

    (               shift and go to state 36


state 14

    (11) structure -> : . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 37
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 15

    (40) expression -> ADD_OP . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 38
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 16

    (19) expression -> NUMBER .

    .               reduce using rule 19 (expression -> NUMBER .)
    ADD_OP          reduce using rule 19 (expression -> NUMBER .)
    MULT_OP         reduce using rule 19 (expression -> NUMBER .)
    <               reduce using rule 19 (expression -> NUMBER .)
    >               reduce using rule 19 (expression -> NUMBER .)
    [               reduce using rule 19 (expression -> NUMBER .)
    )               reduce using rule 19 (expression -> NUMBER .)
    ;               reduce using rule 19 (expression -> NUMBER .)
    $end            reduce using rule 19 (expression -> NUMBER .)
    }               reduce using rule 19 (expression -> NUMBER .)
    ]               reduce using rule 19 (expression -> NUMBER .)
    ,               reduce using rule 19 (expression -> NUMBER .)


state 17

    (21) expression -> STRING .

    .               reduce using rule 21 (expression -> STRING .)
    ADD_OP          reduce using rule 21 (expression -> STRING .)
    MULT_OP         reduce using rule 21 (expression -> STRING .)
    <               reduce using rule 21 (expression -> STRING .)
    >               reduce using rule 21 (expression -> STRING .)
    [               reduce using rule 21 (expression -> STRING .)
    )               reduce using rule 21 (expression -> STRING .)
    ;               reduce using rule 21 (expression -> STRING .)
    $end            reduce using rule 21 (expression -> STRING .)
    }               reduce using rule 21 (expression -> STRING .)
    ]               reduce using rule 21 (expression -> STRING .)
    ,               reduce using rule 21 (expression -> STRING .)


state 18

    (22) expression -> scene .

    .               reduce using rule 22 (expression -> scene .)
    ADD_OP          reduce using rule 22 (expression -> scene .)
    MULT_OP         reduce using rule 22 (expression -> scene .)
    <               reduce using rule 22 (expression -> scene .)
    >               reduce using rule 22 (expression -> scene .)
    [               reduce using rule 22 (expression -> scene .)
    )               reduce using rule 22 (expression -> scene .)
    ;               reduce using rule 22 (expression -> scene .)
    $end            reduce using rule 22 (expression -> scene .)
    }               reduce using rule 22 (expression -> scene .)
    ]               reduce using rule 22 (expression -> scene .)
    ,               reduce using rule 22 (expression -> scene .)


state 19

    (23) expression -> cli .

    .               reduce using rule 23 (expression -> cli .)
    ADD_OP          reduce using rule 23 (expression -> cli .)
    MULT_OP         reduce using rule 23 (expression -> cli .)
    <               reduce using rule 23 (expression -> cli .)
    >               reduce using rule 23 (expression -> cli .)
    [               reduce using rule 23 (expression -> cli .)
    )               reduce using rule 23 (expression -> cli .)
    ;               reduce using rule 23 (expression -> cli .)
    $end            reduce using rule 23 (expression -> cli .)
    }               reduce using rule 23 (expression -> cli .)
    ]               reduce using rule 23 (expression -> cli .)
    ,               reduce using rule 23 (expression -> cli .)


state 20

    (12) scene -> SCENE . ( expression , [ id_list ] )

    (               shift and go to state 39


state 21

    (13) cli -> CLI . ( expression , rect ) { program }

    (               shift and go to state 40


state 22

    (2) program -> statement ; .
    (3) program -> statement ; . program
    (1) program -> . statement
    (2) program -> . statement ;
    (3) program -> . statement ; program
    (4) statement -> . ID = expression
    (5) statement -> . member = expression
    (6) statement -> . structure
    (7) statement -> . EMPTY
    (8) statement -> . PRINT
    (26) statement -> . WAITONEFRAME
    (28) member -> . expression . climember
    (9) structure -> . WHILE ( expression ) { program }
    (10) structure -> . IF ( expression ) { program }
    (11) structure -> . : expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }

    $end            reduce using rule 2 (program -> statement ; .)
    }               reduce using rule 2 (program -> statement ; .)
    ID              shift and go to state 3
    EMPTY           shift and go to state 7
    PRINT           shift and go to state 8
    WAITONEFRAME    shift and go to state 9
    WHILE           shift and go to state 10
    IF              shift and go to state 13
    :               shift and go to state 14
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    statement                      shift and go to state 2
    program                        shift and go to state 41
    expression                     shift and go to state 4
    member                         shift and go to state 5
    structure                      shift and go to state 6
    scene                          shift and go to state 18
    cli                            shift and go to state 19

state 23

    (4) statement -> ID = . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 42
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 24

    (28) member -> expression . . climember
    (34) climember -> . FUNC
    (35) climember -> . IMG
    (36) climember -> . X
    (37) climember -> . Y
    (38) climember -> . W
    (39) climember -> . H

    FUNC            shift and go to state 44
    IMG             shift and go to state 45
    X               shift and go to state 46
    Y               shift and go to state 47
    W               shift and go to state 48
    H               shift and go to state 49

    climember                      shift and go to state 43

state 25

    (17) expression -> expression ADD_OP . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 50
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 26

    (18) expression -> expression MULT_OP . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 51
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 27

    (29) expression -> expression < . expression
    (31) expression -> expression < . = expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    =               shift and go to state 53
    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 52
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 28

    (30) expression -> expression > . expression
    (32) expression -> expression > . = expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    =               shift and go to state 55
    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 54
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 29

    (33) expression -> expression [ . expression ]
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 56
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 30

    (5) statement -> member = . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    member                         shift and go to state 34
    expression                     shift and go to state 57
    scene                          shift and go to state 18
    cli                            shift and go to state 19

state 31

    (9) structure -> WHILE ( . expression ) { program }
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MULT_OP expression
    (19) expression -> . NUMBER
    (20) expression -> . ID
    (21) expression -> . STRING
    (22) expression -> . scene
    (23) expression -> . cli
    (24) expression -> . { program }
    (25) expression -> . ( expression )
    (27) expression -> . member
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . expression < = expression
    (32) expression -> . expression > = expression
    (33) expression -> . expression [ expression ]
    (40) expression -> . ADD_OP expression
    (12) scene -> . SCENE ( expression , [ id_list ] )
    (13) cli -> . CLI ( expression , rect ) { program }
    (28) member -> . expression . climember

    NUMBER          shift and go to state 16
    ID              shift and go to state 33
    STRING          shift and go to state 17
    {               shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 15
    SCENE           shift and go to state 20
    CLI             shift and go to state 21

    expression                     shift and go to state 58
    scene                          shift and go to state 18
    cli                            shift and go to state 19
    member                         shift and go to state 34

state 32

    (25) expression -> ( expression . )
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MULT_OP expression
    (29) expression -> expression . < expression
    (30) expression -> expression . > expression
    (31) expression -> expression . < = expression
    (32) expression -> expression . > = expression
    (33) expression -> expression . [ expression ]
    (28) member -> expression . . climember

    )               shift and go to state 59
    ADD_OP          shift and go to state 25
    MULT_OP         shift and go to state 26
    <               shift and go to state 27
    >               shift and go to state 28
    [               shift and go to state 29
    .               shift and go to state 24


state 33

    (20) expression -> ID .

    )               reduce using rule 20 (expression -> ID .)
    ADD_OP          reduce using rule 20 (expression -> ID .)
    MULT_OP         reduce using rule 20 (expression -> ID .)
    <               reduce using rule 20 (expression -> ID .)
    >               reduce using rule 20 (expression -> ID .)
    [               reduce using rule 20 (expression -> ID .)
    .               reduce using rule 20 (expression -> ID .)
    ;               reduce using rule 20 (expression -> ID .)
    $end            reduce using rule 20 (expression -> ID .)
    }               reduce using rule 20 (expression -> ID .)
    ]               reduce using rule 20 (expression -> ID .)
    ,               reduce using rule 20 (expression -> ID .)


state 34

    (27) expression -> member .
